--- a/index.html
+++ b/index.html
@@ -470,11 +470,8 @@
     <div class="footer-bottom">
       <div class="container">
         <div class="row">
-          <div class="col-sm-6">
-            <p>&copy; 2016 Oxygen Theme.</p>
-          </div>
-          <div class="col-sm-6">
-            <p class="pull-right">Crafted by <a href="http://designscrazed.org/">Allie</a></p>
+          <div class="col-sx-12">
+            <p>&copy; 2016 Solid-Soft.</p>
           </div>
         </div>
       </div>
