--- a/index.html
+++ b/index.html
@@ -253,17 +253,17 @@
         <div class="col-sm-3">
           <div class="folio-item wow fadeInLeftBig" data-wow-duration="1000ms" data-wow-delay="400ms">
             <div class="folio-image">
-              <img class="img-responsive" src="images/portfolio/HighImpactCharitySmall.jpg" alt="HighImpactCharity">
+              <img class="img-responsive" src="images/portfolio/adrenalin.jpg" alt="HighImpactCharity">
             </div>
             <div class="overlay">
               <div class="overlay-content">
                 <div class="overlay-text">
                   <div class="folio-info">
-                    <h3>HighImpactCharity</h3>
-                    <p>javascript, html, sass(css)</p>
+                    <h3>Adrenalin Gym</h3>
+                    <p>Facebook API, HTML, CSS, JS, webpack.</p>
                   </div>
                   <div class="folio-overview">
-                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio/portfolio-HighImpactCharity.html" ><i class="fa fa-link"></i></a></span>
+                    <span class="folio-link"><a class="folio-read-more" href="#" data-single_url="portfolio/portfolio-AdrenalinGym.html" ><i class="fa fa-link"></i></a></span>
                   </div>
                 </div>
               </div>
