--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
         <div class="contact-form wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
           <div class="row">
             <div class="col-sm-6">
-              <form id="main-contact-form" name="contact-form" method="post" action="/sendemail.php">
+              <form id="main-contact-form" name="contact-form" method="post" action="//formspree.io/solidsoftmanager@gmail.com">
                 <div class="row  wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">
                   <div class="col-sm-6">
                     <div class="form-group">
